Show other players when you player entered new area

--- a/code/ui/PlatformerKillfeed/PlatformerKillfeedEntry.html
+++ b/code/ui/PlatformerKillfeed/PlatformerKillfeedEntry.html
@@ -1,7 +1,8 @@
 ﻿
 <root>
 
-    <label class="name">Spectator:</label>
+    <label class="name"></label>
     <label class="message" @ref="Message"></label>
+    <label class="message2" @ref="Message2"></label>
 
 </root>
