Waiting for players style

--- a/code/UI/Hud.html
+++ b/code/UI/Hud.html
@@ -11,6 +11,7 @@
 	<CoinCurrent />
 	<KeysCollected />
 	<NewMajorArea />
+	<WaitingForPlayers />
 	<NewArea />
 	<PlatformerChatBox />
 	<PlatformerKillfeed />
