Add PlayerCard component https://files.facepunch.com/devultj/1b2411b1/sbox-dev_7gwtjYSQjU.png

--- a/code/UI/Hud.html
+++ b/code/UI/Hud.html
@@ -3,11 +3,8 @@
 
 <root>
 	<Scoreboard />
-	<AvatarPanel />
+	<PlayerCard />
 	<PlatformerNameTags />
-	<HealthCurrent />
-	<LifeCurrent />
-	<CoinCurrent />
 	<KeysCollected />
 	<NewMajorArea />
 	<WaitingForPlayers />
