Restyled some of the scoreboard https://files.facepunch.com/devultj/1b2511b1/sbox-dev_71G8BnWNDe.png

--- a/code/ui/Base/Scoreboard/Scoreboard.html
+++ b/code/ui/Base/Scoreboard/Scoreboard.html
@@ -4,7 +4,7 @@
 <root class="scoreboard">
 
     <panel class="header" @ref="Header">
-        <label class="name">Player</label>
+        <label class="player-name">Name</label>
         <label class="kills">Points</label>
         <label class="deaths">Deaths</label>
         <label class="ping">Ping</label>
