Add logo, restyled hints (remove later) https://files.facepunch.com/devultj/1b2511b1/sbox-dev_Y91hsWdMZL.png

--- a/code/ui/Base/Scoreboard/Scoreboard.html
+++ b/code/ui/Base/Scoreboard/Scoreboard.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="Scoreboard.scss" />
 
 <root class="scoreboard">
-
+    <img class="logo" src="/ui/hud/scoreboard/logo.png"/>
     <panel class="header" @ref="Header">
         <label class="player-name">Name</label>
         <label class="kills">Points</label>
