Tweaked hud elements on brawl

--- a/code/UI/Brawl/BrawlHud.html
+++ b/code/UI/Brawl/BrawlHud.html
@@ -3,7 +3,7 @@
 
 <root>
 
-    <label class="title">Brawl!</label>
+    <img SRC="ui/hud/logo/brawl_logo.png" class="Title"></img>
     <HurtOverlay />
 
 </root>
