--- a/code/UI/Base/MapVote/MapIcon.html
+++ b/code/UI/Base/MapVote/MapIcon.html
@@ -2,14 +2,11 @@
 <link rel="stylesheet" href="MapIcon.scss" />
 
 <div>
-
-    <div class="info">
-
-        <div class="orgavatar" @ref="OrgAvatar"></div>
+    <div class="icon">
         <text class="title" @text="Title"></text>
+        <div class="orgavatar" @ref="OrgAvatar"></div>
+        <div class="thumbnailicon" @ref="ThumbnailIcon"></div>
         <text class="orgname" @text="Org"></text>
-
+        <text class="votes" @text="VoteCount"></text>
     </div>
-
-    <text class="votes" @text="VoteCount"></text>
 </div>
